-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 18.0.0 (18.0 branch)
-
None
-
06f4fbb6f (18.0)
It seems that re-downloading qmlls is not possible when a download fails.
The qmlls download failed because of some network interruption and I couldn't redownload qmlls via the button because the current check thought that qmlls was successfully downloaded (even if the binary is missing).
Change the check to actually check if there is a qmlls binary, and allow to redownload qmlls binaries even when there is some leftovers from the last download lying around.
| For Gerrit Dashboard: QTCREATORBUG-33592 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 681598,3 | qmllsclientsettings: make qmlls download more robust | 18.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |